fix:overflow x

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+html{
+    overflow-x: hidden;
+}
 body{
     background-color: rgb(6, 65, 65)
 }
@@ -94,3 +97,4 @@ body{
     transform: scale(1.05);
     transition: all ease-out 0.5s;
 }
+/* skills page styling */
